# parallel-numerical

./: CMakeLists.txt
include/: array.h  array.hxx  util.h  util.hxx
src/eigenvalue/: CMakeLists.txt  c11_jacobi_eigen.cpp  c11_jacobi_eigen.h  eigenvalue.cpp  eigenvalue.h  omp_jacobi_eigen.cpp  omp_jacobi_eigen.h  seq_jacobi_eigen.cpp  seq_jacobi_eigen.h
src/lin_equations/: CMakeLists.txt  c11_gaussian.cpp  c11_gaussian.h  c11_jacobi.cpp  c11_jacobi.h  lin_equations.cpp  lin_equations.h  lin_equations.hxx  omp_gaussian.cpp  omp_gaussian.h  omp_jacobi.cpp  omp_jacobi.h  seq_gaussian.cpp  seq_gaussian.h  seq_jacobi.cpp  seq_jacobi.h
src/matrix/: CMakeLists.txt  c11_helper.cpp  c11_matrix_mult.cpp  c11_matrix_mult.h  matrix_mult.cpp  matrix_mult.h  omp_helper.cpp  omp_matrix_mult.cpp  omp_matrix_mult.h  seq_helper.cpp  seq_matrix_mult.cpp  seq_matrix_mult.h
src/polation/: CMakeLists.txt  c11_polation.cpp  c11_polation.h  omp_polation.cpp  omp_polation.h  polation.cpp  polation.h  polation.hxx  readme.txt  seq_polation.cpp  seq_polation.h
src/search/: CMakeLists.txt  binary.h  c11_binary.cpp  omp_binary.cpp  search.cpp  search.h  seq_binary.cpp
src/sorting/: CMakeLists.txt  c11_bubblesort.cpp  c11_countingsort.cpp  c11_quicksort.cpp  c11_selectionsort.cpp  omp_bubblesort.cpp  omp_countingsort.cpp  omp_quicksort.cpp  omp_selectionsort.cpp  seq_bubblesort.cpp  seq_countingsort.cpp  seq_quicksort.cpp  seq_selectionsort.cpp  sorting.cpp  sorting.h
src/sorting/bsort/: c11_bubblesort.h  omp_bubblesort.h  seq_bubblesort.h
src/sorting/csort/: c11_countingsort.h  omp_countingsort.h  seq_countingsort.h
src/sorting/qsort/: c11_quicksort.h  omp_quicksort.h  seq_quicksort.h
src/sorting/ssort/: c11_selectionsort.h  omp_selectionsort.h  seq_selectionsort.h
src/util/: CMakeLists.txt  util.cpp
